# tp1-sl

./: DEC.md  cabal  tp1-sl.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: test1.sl  test_bmi.sl  test_comments.sl  test_expr.sl  test_factorial.sl  test_for.sl  test_func.sl  test_id.sl  test_idents.sl  test_let.sl  test_lexer_min.sl  test_map.sl  test_map2.sl  test_people.sl  test_reverse.sl  test_struct.sl  test_struct2.sl  test_while.sl
scripts/: test.sh  test1.sh
src/: AST.hs  AstTree.hs  Lexer.x  Parser.y  Pretty.hs
