cabal-version:       3.0
name:                tp1-sl
version:             0.1.0.0
build-type:          Simple

executable slc
  main-is:             Main.hs
  hs-source-dirs:      app, src
  other-modules:
      AST
      Lexer  
  build-depends:
      base   >=4.14 && <5,
      array,
      megaparsec
  default-language:    Haskell2010
